# wandering-narwhal-zoom

./: .gitignore  AI_FEATURES_TESTING_REPORT.md  BACKEND_ONLY_FILTERING_MIGRATION_PLAN.md  BRYAN_HAAS_DATA_ANALYSIS.md  CLAUDE_API_KEY_RESOLUTION_GUIDE.md  CLAUDE_API_TESTING_REPORT.md  COMPREHENSIVE_DATABASE_COMPLETENESS_REPORT.md  COMPREHENSIVE_END_TO_END_FREEZE_PREVENTION_TEST_REPORT.md  CRITICAL_FIXES_DO_NOT_REVERT.md  DATABASE_CONNECTION_CLEANUP_FIXES.md  DATABASE_IMPROVEMENT_PLAN.md  DEVELOPMENT_SETUP_PLAN.md  EMERGENCY_RECOVERY_CHANGES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODEL_ENHANCEMENT_ROADMAP.md  MONGODB_SETUP_DOCUMENTATION.md  MONGODB_VERIFICATION_SUMMARY.md  NEXT_STEPS.md  PASSWORD_RESET_SECURITY_ANALYSIS.md  README.md  RECOMMENDATION_ENGINE_ANALYSIS.md  RECOMMENDATION_ENGINE_ANALYSIS_REPORT.md  RECOMMENDATION_ENGINE_IMPROVEMENT_PLAN.md  RECOMMENDATION_SYSTEM_ANALYSIS.md  SAFETY_GUARDRAILS_README.md  VALIDATION_RESULTS.md  VERIFICATION_FRAMEWORK.md  ai-development-plan.md  ai_features_test_results.json  ai_test_results.json  all_career_types.json  all_careers.json  analyze_career_data.py  analyze_careers_db.py  api_key_verification_tool.py  api_spec.json  architecture-design.md  babel.config.cjs  calculate_homepage_stats.py  (+157 more)
backend/: .env.example  .gitignore  1_day_sprint_plan.md  PUBLIC_SERVICE_CAREERS_README.md  README.md  agriculture_environment_careers.py  business_finance_careers.py  calculate_skill_combinations.py  career_data.json  career_recommendations.md  check_db.py  check_filtering.py  clean_career_data.py  count_careers.py  (+42 more)
(+135 files in other folders)
