[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie==1.23.6",
    "fastapi==0.111.1",
    "motor==3.3.2",
    "pydantic==2.8.2",
    "pymongo==4.6.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.24.0",
]
